fixat case 3 så den inte breakar i if-satsen och i c6 tempZip är fixad